manifests/deploy-epgrec.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: epgrec-frontend
  namespace: epgrec
spec:
  ports:
  - port: 80
  selector:
    app: epgrec-frontend
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: egprec-frontend
  namespace: epgrec
spec:
  selector:
    matchLabels:
      app: epgrec-frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: epgrec-frontend
    spec:
      containers:
      - image: a2ito/epgrec-frontend:latest
        name: epgrec-frontend
        ports:
        - containerPort: 80
          name: epgrec-frontend
        volumeMounts:
        - name: rectmp
          mountPath: /temp
      nodeSelector:
        kubernetes.io/arch: "arm"
      volumes:
      - name: rectmp
        persistentVolumeClaim:
          claimName: pvc-rectmp
