manifests/deploy-minidlna.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minidlna
  namespace: epgrec
spec:
  ports:
  - port: 31900
    protocol: UDP
    targetPort: 1900
  - port: 30200
    targetPort: 8200
  selector:
    app: minidlna
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  creationTimestamp: null
  name: minidlna
  namespace: epgrec
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: minidlna
    spec:
      hostNetwork: true
      containers:
      - image: vladgh/minidlna
        name: minidlna
        ports:
        - containerPort: 8200
        - containerPort: 1900
          protocol: UDP
        resources: {}
        volumeMounts:
        - name: recdata
          mountPath: /media
      restartPolicy: Always
      nodeSelector:
        kubernetes.io/arch: "arm"
      volumes:
      - name: recdata
        persistentVolumeClaim:
          claimName: pvc-recdata
