manifests/ingress-epgrec.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-epgrec
  namespace: epgrec
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: epgrec.rasp-cluster.local
    http:
      paths: 
      - path: /
        backend:
          serviceName: epgrec-frontend
          servicePort: 80
